Adding Client API Docs
