# app/Http/Controllers/ClientsController.php
@@ -65,13 +65,106 @@ class ClientsController extends Controller
     }
 
     /**
-     * Store a newly created resource in storage.
-     *
-     * @param  ClientCreateRequest $request
-     *
-     * @return \Illuminate\Http\Response
-     *
-     * @throws \Prettus\Validator\Exceptions\ValidatorException
+     * @OA\Post(
+     *      tags={"Clients"},
+     *      path="/api/clients",
+     *      summary="Store a client",
+     *      description="Return message",
+     *      @OA\Parameter(
+     *          name="type",
+     *          description="Type field",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="address",
+     *          description="Address field",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="city",
+     *          description="City field",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="state",
+     *          description="State field",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="zipcode",
+     *          description="Zipcode field",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="phone",
+     *          description="Phone field",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="email",
+     *          description="Email field",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="website",
+     *          description="Website field",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="status",
+     *          description="Status field",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="user_id",
+     *          description="User ID field",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *     @OA\Response(response="200", description="Store clients"),
+     *      security={
+     *           {"apiKey": {}}
+     *      }
+     * )
      */
     public function store(ClientCreateRequest $request)
     {
@@ -90,12 +183,28 @@ class ClientsController extends Controller
     }
 
     /**
-     * Display the specified resource.
-     *
-     * @param  int $id
-     *
-     * @return \Illuminate\Http\Response
+     * @OA\Get(
+     *     tags={"Clients"},
+     *     path="/api/clients/{id}",
+     *     operationId="getClientById",
+     *     @OA\Parameter(
+     *          name ="id",
+     *          in = "path",
+     *          description = "ID of client to return",
+     *          required = true,
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *     ),
+     *     summary="Show a client",
+     *     description="Return a client",
+     *     @OA\Response(response="200", description="An json"),
+     *     security={
+     *           {"apiKey": {}}
+     *     }
+     * )
      */
+
     public function show($id)
     {
         $client = $this->repository->find($id);
@@ -121,14 +230,116 @@ class ClientsController extends Controller
     }
 
     /**
-     * Update the specified resource in storage.
-     *
-     * @param  ClientUpdateRequest $request
-     * @param  string $id
-     *
-     * @return Response
-     *
-     * @throws \Prettus\Validator\Exceptions\ValidatorException
+     * @OA\Put(
+     *      tags={"Clients"},
+     *      path="/api/clients/{id}",
+     *      summary="Update a client",
+     *      description="Update a client",
+     *      operationId="getClientById",
+     *      @OA\Parameter(
+     *          name ="id",
+     *          in = "path",
+     *          description = "ID of client to return",
+     *          required = true,
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="type",
+     *          description="Type field",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="address",
+     *          description="Address field",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="city",
+     *          description="City field",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="state",
+     *          description="State field",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="zipcode",
+     *          description="Zipcode field",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="phone",
+     *          description="Phone field",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="email",
+     *          description="Email field",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="website",
+     *          description="Website field",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="status",
+     *          description="Status field",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="user_id",
+     *          description="User ID field",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *     @OA\Response(response="200", description="Store categories"),
+     *      security={
+     *           {"apiKey": {}}
+     *      }
+     * )
      */
     public function update(ClientUpdateRequest $request, $id)
     {
@@ -148,11 +359,26 @@ class ClientsController extends Controller
 
 
     /**
-     * Remove the specified resource from storage.
-     *
-     * @param  int $id
-     *
-     * @return \Illuminate\Http\Response
+     * @OA\Delete(
+     *     tags={"Clients"},
+     *     path="/api/clients/{id}",
+     *     operationId="getClientById",
+     *     @OA\Parameter(
+     *          name ="id",
+     *          in = "path",
+     *          description = "ID of client to return",
+     *          required = true,
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *     ),
+     *     summary="Delete a client",
+     *     description="Delete a client",
+     *     @OA\Response(response="200", description="An json"),
+     *     security={
+     *           {"apiKey": {}}
+     *     }
+     * )
      */
     public function destroy($id)
     {
@@ -163,6 +389,18 @@ class ClientsController extends Controller
         ]);
     }
 
+    /**
+     * @OA\Get(
+     *     tags={"Clients"},
+     *     path="/api/clients/trashed",
+     *     summary="List of trashed clients",
+     *     description="Return a list of trashed clients",
+     *     @OA\Response(response="200", description="An json"),
+     *      security={
+     *           {"apiKey": {}}
+     *       }
+     * )
+     */
     public function trashed()
     {
         $this->repository->pushCriteria(new OnlyTrashedCriteria());
@@ -173,6 +411,20 @@ class ClientsController extends Controller
         ]);
     }
 
+
+    /**
+     * @OA\Put(
+     *      tags={"Clients"},
+     *      path="/api/clients/restore/{id}",
+     *      summary="Restore a client",
+     *      description="Restore a client",
+     *      operationId="getCategoryById",
+     *     @OA\Response(response="200", description="Store clients"),
+     *      security={
+     *           {"apiKey": {}}
+     *      }
+     * )
+     */
     public function restore($id)
     {
         try {
